--- a/customer-success-a-personal-study.html
+++ b/customer-success-a-personal-study.html
@@ -82,12 +82,12 @@
 <p>While the job titles may have changed over time, the core responsibilities remained consistent. In essence, I was entrusted with customer relationships post-sales, ensuring that the value promised during the sales process was delivered. My work involved fostering strong connections with my customer base, providing ongoing support until they either outgrew their relationship with us or ceased doing business with our organization.</p>
 <h2>What is Customer Success…to me?</h2>
 <p>You can find online a thousand different ways to do Customer Success.  Just a quick look down my LinkedIn feed I find the following readings:
-<em> Creating High Performance CX Teams
-</em> Transforming CS Strategy for Enterprise B2B SaaS
-<em> The Value-Centric CSM Operating System
-</em> Client Relationship Strategies
-<em> The Difference in CSM Approaches
-</em> The Ultimate Guide to Customer Success in SaaS</p>
+- Creating High Performance CX Teams
+- Transforming CS Strategy for Enterprise B2B SaaS
+- The Value-Centric CSM Operating System
+- Client Relationship Strategies
+- The Difference in CSM Approaches
+- The Ultimate Guide to Customer Success in SaaS</p>
 <p>Need I go on?  These are all great reads and I recommend you explore all aspects of the role.</p>
 <p>However, what does Customer Success mean to me? I remember sharing my philosophy with a CSM student: 'I want the customer to feel like they've just won the CSM lottery.' What I meant by this is it was my aim to make customers feel confident and valued in their relationship with me and the company I represented. </p>
 <p>This means providing exceptional support, characterized by swift responses, innovative solutions, attentive listening, and more. In this blog series, we'll dive into these essential topics and explore what it takes to deliver world-class customer care.</p></div>
