AI Persona Update

--- a/ai-bookmarks.html
+++ b/ai-bookmarks.html
@@ -85,6 +85,8 @@ Starting a running list of AI links as I start to use the tools more and more. (
 <p>Groq Chat<br>
 <a href="https://groq.com/" target="_blank">https://groq.com/</a> - Test llama3:70b - born with the vision of making AI accessible for all.<br>
 <a href="https://console.groq.com/playground" target="_blank">https://console.groq.com/playground</a><br></p>
+<p>Impersona Chat
+<a href="https://impersona.chat/" target="_blank">https://impersona.chat/</a> - Impersona allows you to respond as different personas from Valley Girl to just an emoji.</p>
 <p>LMSys.org<br>
 <a href="https://chat.lmsys.org/" target="_blank">https://chat.lmsys.org/</a> - Directly chat and test various LLMs. <br></p>
 <p>Meta.ai<br>
