--- a/guitar-warmup.html
+++ b/guitar-warmup.html
@@ -86,7 +86,7 @@
     <a class='category' href='https://blog.billhertzing.com/category/music.html'>Music</a>
   </span>
   <span class="categories">
-    <a class="category" href="https://blog.billhertzing.com/tag/lilypond.html">lilypond</a>,    <a class="category" href="https://blog.billhertzing.com/tag/guitar.html">guitar</a>  </span>
+    <a class="category" href="https://blog.billhertzing.com/tag/score.html">score</a>,    <a class="category" href="https://blog.billhertzing.com/tag/guitar.html">guitar</a>  </span>
 </p><div class="sharing">
 </div>    </footer>
   </article>
