--- a/im-not-in-love-by-10cc.html
+++ b/im-not-in-love-by-10cc.html
@@ -77,8 +77,8 @@
 <p>Click link for Sheet Music or LilyPond score.</p>
 <p><a href="images/10cc-I'm_Not_In_Love.pdf" target="_blank">Score</a>
  <a href="images/10cc-I'm_Not_In_Love.txt" target="_blank">LilyPond</a></p>
-<p>[https://www.hacklily.org/]{https://www.hacklily.org/} - Browser editor for Lilypond.</p>
-<p>[https://ide.omet.ca/]{https://ide.omet.ca/} - More sophisticated editor for Lilypond.</p></div>
+<p><a href="https://www.hacklily.org/" target="_blank">https://www.hacklily.org/</a> - Browser editor for Lilypond.</p>
+<p><a href="https://ide.omet.ca/" target="_blank">https://ide.omet.ca/</a> - More sophisticated editor for Lilypond.</p></div>
     <footer>
 <p class="meta">
   <span class="byline author vcard">
