Traffic Map Update

--- a/traffic-map.html
+++ b/traffic-map.html
@@ -76,7 +76,9 @@
 <p><a href="https://its.txdot.gov/its/District/SAT" target="_blank">TXDOT San Antonio</a></p>
 <p><a href="https://www.txdot.gov/discover/live-traffic-cameras.html" target="_blank">TXDOT Other Cities</a></p>
 <h3>SigAlert.com</h3>
-<p><a href="https://www.sigalert.com/?lat=29.60186&amp;lon=-98.38574&amp;z=0" target="_blank">San Antonio Traffic Report</a></p></div>
+<p><a href="https://www.sigalert.com/?lat=29.60186&amp;lon=-98.38574&amp;z=0" target="_blank">San Antonio Traffic Report</a></p>
+<h3>Waze</h3>
+<p><a href="https://www.waze.com/live-map/" target="_blank">Waze Live Map</a></p></div>
     <footer>
 <p class="meta">
   <span class="byline author vcard">
