AI Bookmark Update

--- a/ai-bookmarks.html
+++ b/ai-bookmarks.html
@@ -91,6 +91,8 @@ Starting a running list of AI links as I start to use the tools more and more. (
 <a href="Delphi.ai" target="_blank">Delphi.ai</a> - Delphi aims to have AI clones of individuals.  You can talk with philosophers, historical figures, or thought leaders on the free tier.  You can even create one of yourself. </p>
 <p>Gemini<br>
 <a href="https://gemini.google.com/app" target="_blank">https://gemini.google.com/app</a> - Google's most capable AI model widely available today, 1.0 Ultra<br></p>
+<p>Glhf.chat<br>
+<a href="https://glhf.chat/" target="_blank">https://glhf.chat/</a> - Allows you to run different models right from the browser.  To test any model, put the Hugging Face link when starting a new chat.<br>Example 'https://huggingface.co/meta-llama/Llama-3.3-70B-Instruct'<br></p>
 <p>GlobalGPT<br>
 <a href="https://glbgpt.com/" target="_blank">https://glbgpt.com/</a> - GlobalGPT is your gateway to accessing the top AI models with no restrictions, including:</p>
 <ul>
