--- a/traffic-map.html
+++ b/traffic-map.html
@@ -78,7 +78,11 @@
 <h3>SigAlert.com</h3>
 <p><a href="https://www.sigalert.com/?lat=29.60186&amp;lon=-98.38574&amp;z=0" target="_blank">San Antonio Traffic Report</a></p>
 <h3>Waze</h3>
-<p><a href="https://www.waze.com/live-map/" target="_blank">Waze Live Map</a></p></div>
+<p><a href="https://www.waze.com/live-map/" target="_blank">Waze Live Map</a></p>
+<h3>Google</h3>
+<p><a href="https://www.google.com/maps/" target="_blank">Google Map</a></p>
+<h3>Local Conditions</h3>
+<p><a href="https://www.localconditions.com/weather-san-antonio-texas/78201/traffic.php">Local Conditions Map</a></p></div>
     <footer>
 <p class="meta">
   <span class="byline author vcard">
