--- a/guitar-warmup.html
+++ b/guitar-warmup.html
@@ -74,7 +74,10 @@
 <p>I've never established a formal warmup routine. Typically, I start improvising on the guitar without a structured approach, warming up the fingers with both solo lines and chords, and preparing the mind.</p>
 <h3>Open String Upstrokes</h3>
 <p>Fretting hand not needed for this exercise.  Just open strings.</p>
-<p><img alt="Open String Upstrokes" src="images/open-string-upstrokes.jpg"></p></div>
+<p><img alt="Open String Upstrokes" src="images/open-string-upstrokes.jpg"></p>
+<h3>Hammer On / Pull Offs</h3>
+<p>This simple exercise lightly stretches and warms up the left hand.</p>
+<p><img alt="Hammer On / Pull Offs" src="images/hammer-on-pull-off.jpg"></p></div>
     <footer>
 <p class="meta">
   <span class="byline author vcard">
