--- a/index.html
+++ b/index.html
@@ -89,7 +89,12 @@
 <p>I've never established a formal warmup routine. Typically, I start improvising on the guitar without a structured approach, warming up the fingers with both solo lines and chords, and preparing the mind.</p>
 <h3>Open String Upstrokes</h3>
 <p>Fretting hand not needed for this exercise.  Just open strings.</p>
-<p><img alt="Open String Upstrokes" src="images/open-string-upstrokes.jpg"></p></div>
+<p><img alt="Open String Upstrokes" src="images/open-string-upstrokes.jpg"></p>
+<h3>Hammer On / Pull Offs</h3>
+<p>This …</p></div>
+  <footer>
+    <a rel="full-article" href="https://blog.billhertzing.com/guitar-warmup.html">Read On &crarr;</a>
+  </footer>
   		</article>
   		<article>
 <header>
