--- a/index2.html
+++ b/index2.html
@@ -213,7 +213,7 @@
 <p>(This is a carry-over from my tech-tips site. Seemed silly managing two sites.)
 Starting a running list of AI links as I start to use the tools more and more. (Updated 11/14/2024)</p>
 <h1>Chat Apps</h1>
-<p><strong><em>AI - A Commandline ChatGPT</em></strong><br>
+<p><strong>AI - A Commandline ChatGPT</strong><br>
 <a href="https://github.com/nitefood/ai-bash-gpt" target="_blank">AI</a> is a client in BASH where you can have …</p></div>
   <footer>
     <a rel="full-article" href="https://blog.billhertzing.com/ai-bookmarks.html">Read On &crarr;</a>
