AI Bookmark Update

--- a/ai-bookmarks.html
+++ b/ai-bookmarks.html
@@ -132,7 +132,7 @@ Starting a running list of AI links as I start to use the tools more and more. (
 <a href="https://pi.ai/" target="_blank">https://pi.ai/</a> - Have a verbal conversation with your AI chat software.</p>
 <p><strong>Pinokio</strong><br>
 <a href="https://pinokio.computer/" target="_blank">https://pinokio.computer/</a> - Install, run, &amp; control anything on your computer with 1 click.<br></p>
-<p><strong>Poe&lt;</strong>br&gt;
+<p><strong>Poe</strong><br>
 <a href="https://poe.com/" target="_blank">https://poe.com/</a> - Use multiple LLMs from one link.<br></p>
 <p><strong>RAG</strong><br>
 <a href="https://aws.amazon.com/what-is/retrieval-augmented-generation/" target="_blank">https://aws.amazon.com/what-is/retrieval-augmented-generation/</a> - Retrieval-Augmented Generation (RAG) is the process of optimizing the output of a large language model, so it references an authoritative knowledge base outside of its training data sources before generating a response. </p>
@@ -140,7 +140,7 @@ Starting a running list of AI links as I start to use the tools more and more. (
 <a href="https://www.taskade.com/" target="_blank">https://www.taskade.com/</a> - Create different chat agents.<br></p>
 <p><strong>You.com</strong><br>
 <a href="https://you.com/" target="_blank">https://you.com/</a> -  A search engine that uses artificial intelligence (AI) to provide personalized results.<br></p>
-<p><strong>NotebookLM&lt;</strong>br&gt;
+<p><strong>NotebookLM</strong><br>
 <a href="https://notebooklm.google.com/" target="_blank">https://notebooklm.google.com/</a> -  Create personal notebooks from the content you select and then query it for reference.<br></p>
 <p><strong>Otter.ai</strong><br>
 <a href="https://otter.ai" target="_blank">https://otter.ai/</a> -  More geared for business uses allows you to take meeting notes and then use AI to help summarize and generate action items.  Connects to your Google or Outlook calendar.<br></p>
@@ -152,7 +152,7 @@ Starting a running list of AI links as I start to use the tools more and more. (
 
 <p><a href="https://ekkinox.github.io/yai/usage/" target="_blank">Usage Examples</a></p>
 <h1>GUI Interfaces</h1>
-<p><strong>AnythingLLM&lt;</strong>br&gt; 
+<p><strong>AnythingLLM</strong><br> 
 <a href="https://useanything.com/" target="_blank">https://useanything.com/</a> is an open-source, customizable, and feature-rich document chatbot designed for intelligent interactions with existing documents. Whether you want to chat intelligently or build knowledge bases using your documents, AnythingLLM has you covered. <br></p>
 <p><strong>MSTY</strong><br>
 <a href="https://msty.app/" target="_blank">https://msty.app/</a> - A very easy to use GUI interface for local and online LLM models.<br></p>
