AI Bookmark Update 3

--- a/ai-bookmarks.html
+++ b/ai-bookmarks.html
@@ -90,7 +90,7 @@ Starting a running list of AI links as I start to use the tools more and more. (
 <p><strong>Delphi.ai</strong><br>
 <a href="Delphi.ai" target="_blank">Delphi.ai</a> - Delphi aims to have AI clones of individuals.  You can talk with philosophers, historical figures, or thought leaders on the free tier.  You can even create one of yourself. </p>
 <p><strong>Gemini</strong><br>
-<a href="https://gemini.google.com/app" target="_blank">https://gemini.google.com/app</a> - Google's most capable AI model widely available today, 1.0 Ultra<br></p>
+<a href="https://gemini.google.com/app" target="_blank">https://gemini.google.com/app</a> - Google's most capable AI model version 2.0.<br></p>
 <p><strong>Glhf.chat</strong><br>
 <a href="https://glhf.chat/" target="_blank">https://glhf.chat/</a> - Allows you to run different models right from the browser.  To test any model, put the Hugging Face link when starting a new chat.<br>Example <code>https://huggingface.co/meta-llama/Llama-3.3-70B-Instruct</code><br></p>
 <p><strong>GlobalGPT</strong><br>
@@ -153,6 +153,19 @@ Starting a running list of AI links as I start to use the tools more and more. (
 
 
 <p><a href="https://ekkinox.github.io/yai/usage/" target="_blank">Usage Examples</a></p>
+<h1>YouTube Video Summaries</h1>
+<p><strong>Noiz</strong><br> 
+<a href="https://noiz.io/" target="_blank">https://noiz.io/</a> - This app is a 1-month trial Chrome add on that generates concise summaries of YouTube videos with AI, enhancing comprehension without watching an entire video.<br></p>
+<p><strong>That Needle</strong><br> 
+<a href="https://gist.thatneedle.com/" target="_blank">https://gist.thatneedle.com/</a> - This app is a free Chrome add on where you can turn YouTube videos into quick summaries using AI, featuring multiple language translation.<br></p>
+<h1>Podcast Generators</h1>
+<p><strong>NotebookLM</strong><br>
+<a href="https://notebooklm.google.com/" target="_blank">https://notebooklm.google.com/</a> - Yes this is the same one as above, but you can create a full podcast from a single website or a document.<br></p>
+<p><strong>SuperPodcast</strong><br>
+<a href="https://www.superpodcast.ai/" target="_blank">https://www.superpodcast.ai/</a> - Convert any document into interactive podcasts where listeners can engage with AI hosts in real-time.<br></p>
+<h1>Marketing</h1>
+<p><strong>Rewrite Something</strong><br>
+<a href="https://rewritesomething.com/" target="_blank">https://rewritesomething.com/</a> - Make product descriptions stand out using AI that delivers ready-to-use content.<br></p>
 <h1>GUI Interfaces</h1>
 <p><strong>AnythingLLM</strong><br> 
 <a href="https://useanything.com/" target="_blank">https://useanything.com/</a> is an open-source, customizable, and feature-rich document chatbot designed for intelligent interactions with existing documents. Whether you want to chat intelligently or build knowledge bases using your documents, AnythingLLM has you covered. <br></p>
@@ -174,7 +187,7 @@ Starting a running list of AI links as I start to use the tools more and more. (
 <a href="https://www.udio.com/" target="_blank">https://www.udio.com/</a> - One of the best AI music generators out there so far.<br></p>
 <h1>Digital Avatars</h1>
 <p>Reid Hoffman meets his AI twin<br>
-<a href="https://www.linkedin.com/pulse/me-myself-ai-qa-my-avatar-reid-hoffman-71unf/" target="_blank">https://www.linkedin.com/pulse/me-myself-ai-qa-my-avatar-reid-hoffman-71unf/</a> - This author creates his AI twin and conducts an interview with it.<br></p></div>
+<a href="https://www.linkedin.com/pulse/me-myself-ai-qa-my-avatar-reid-hoffman-71unf/" target="_blank">https://www.linkedin.com/pulse/me-myself-ai-qa-my-avatar-reid-hoffman-71unf/</a><br> This author creates his AI twin and conducts an interview with it.<br></p></div>
     <footer>
 <p class="meta">
   <span class="byline author vcard">
