AI Bookmark Update 4

--- a/ai-bookmarks.html
+++ b/ai-bookmarks.html
@@ -106,6 +106,8 @@ Starting a running list of AI links as I start to use the tools more and more. (
 <li>Claude 3 Opus</li>
 <li>Claude 3.5 Sonnet</li>
 </ul>
+<p><strong>Grok</strong><br>
+<a href="https://x.com/i/grok" target="_blank">https://x.com/i/grok</a> - The AI over on X. Try it in Fun mode<br></p>
 <p><strong>Groq Chat</strong><br>
 <a href="https://groq.com/" target="_blank">https://groq.com/</a> - Test llama3:70b - born with the vision of making AI accessible for all.<br>
 <a href="https://console.groq.com/playground" target="_blank">https://console.groq.com/playground</a><br></p>
