--- a/vibe-coding-a-word-clock.html
+++ b/vibe-coding-a-word-clock.html
@@ -86,8 +86,8 @@
 <strong>Tuesday, April sixteen, twenty twenty-five</strong></p>
 <h3><strong>What It Took to Get Here</strong></h3>
 <p>I utilize a technique called 'vibe coding', which enables seamless interaction with the AI system. Simply input your requirements into the chat interface, and the AI-driven platform will handle the complex technical coding on your behalf. Need a different background? Just ask! Have an idea for the next step? Explain what you want to achieve, and it will take care of the rest.</p>
-<p>There is no need to be fluent—in JavaScript. No “copy/paste and hope” and then “adapt and debug until it works or you lose your mind.”  Back in the day, I would comb through examples that <em>almost</em> worked, then Frankensteined together my own logic, hoping the animation, for example, would work.</p>
-<p>It fun when you are building something that <em>feels</em> good. You’re not chasing efficiency or solving for some KPI. You’re crafting an experience. Something playful. A bit indulgent. But entirely yours.</p>
+<p>There is no need to be fluent—in JavaScript. No “copy/paste and hope” and then “adapt and debug until it works or you lose your mind.”  Back in the day, I would comb through examples that <em>almost</em> worked, then Frankensteined together my own logic, hoping the animation, for example, would actually run.</p>
+<p>Its fun when you are building something that <em>feels</em> good. You’re not chasing efficiency or solving for some KPI. You’re crafting an experience. Something playful. A bit indulgent. But entirely yours.</p>
 <p><a href="https://blog.billhertzing.com/clock/" target="_blank">Here is a page where you use the clock directly!</a></p></div>
     <footer>
 <p class="meta">
